--- a/css/index.css
+++ b/css/index.css
@@ -7,13 +7,13 @@
 }
 
 .header{
-    height: 70px;
+    height: 50px;
     width:100%;
 
 }
 
 .tool-bar {
-    width: 960px;
+    width: 1060px;
     height: 100%;
     margin: 0 auto;
 }
@@ -21,11 +21,9 @@
 .tool-bar .icon {
     background-position: 0 0;
     display: block;
-    height: 69px;
-    width: 242px;
-    background: url('/img/logo-69.png');
-    background-size: cover;
-
+    color: #2b2b2b;
+    text-decoration: none!important;
+    font-size: x-large;
     float: left;
 }
 
@@ -38,7 +36,6 @@
 .login-status a {
     display: inline-block;
     height: 100%;
-    line-height: 70px;
 }
 
 #scrollToTop a{
