--- a/views/home/home.html
+++ b/views/home/home.html
@@ -1,8 +1,4 @@
-<style>
-    .content {
-        margin: 5px 40px;
-    }
-</style>
-<div class="content">
 
+<div class="content wrapper">
+    <h3>Boston Global Education</h3>
 </div>
