--- a/views/sign_up/sign_up.html
+++ b/views/sign_up/sign_up.html
@@ -1,47 +1,47 @@
-<style>
-    .container {
-        width:400px;
-    }
-</style>
-<div class="row col-xs-12">
-    <h2>Sign Up</h2>
-    <hr>
-</div>
-<div class="col-xs-12  col-lg-12 content"  ng-hide="if_login">
-
-    <div class="row cc-row">
-        <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
-            <div class="form-group">
-                <input class="form-control" type="email" placeholder="Email Address" ng-model="user.email_addr" required>
-            </div>
-            <!--h1>{{user.email_addr}}</h1-->
-        </div>
+<div class="center-block col-xs-12 col-sm-12 col-md-6 col-lg-4 content">
+    <div class="center-block row col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <h2>Sign Up</h2>
+        <hr>
     </div>
+    <div class="col-xs-12  col-lg-12 content"  ng-hide="if_login">
 
-    <div class="row cc-row">
-        <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
-            <div class="form-group">
-                <input class="form-control" type="password" placeholder="Password" ng-model="user.password" ng-minlength="6" required>
-            </div>
-            <!--h1>{{user.password}}</h1-->
-        </div>
-    </div>
-
-    <div class="row cc-row">
-        <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
-            <div class="form-group">
-                <input class="form-control" type="password" placeholder="Password Again" ng-model="user.password2" ng-minlength="6" required>
+        <div class="row cc-row">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <div class="form-group">
+                    <input class="form-control" type="email" placeholder="Email Address" ng-model="user.email_addr" required>
+                </div>
+                <!--h1>{{user.email_addr}}</h1-->
             </div>
         </div>
-    </div>
 
-    <div class="row">
-        <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
-            <a class="btn btn-block btn-lg btn-primary" ng-click="registerProcess()">Register</a>
+        <div class="row cc-row">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <div class="form-group">
+                    <input class="form-control" type="password" placeholder="Password" ng-model="user.password" ng-minlength="6" required>
+                </div>
+                <!--h1>{{user.password}}</h1-->
+            </div>
         </div>
 
-        <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
-            <a class="btn btn-block btn-lg btn-info" href="/#/sign_in">Login</a>
+        <div class="row cc-row">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <div class="form-group">
+                    <input class="form-control" type="password" placeholder="Password Again" ng-model="user.password2" ng-minlength="6" required>
+                </div>
+            </div>
         </div>
+
+        <div class="row">
+            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                <a class="btn btn-block btn-lg btn-primary" ng-click="registerProcess()">Register</a>
+            </div>
+
+            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                <a class="btn btn-block btn-lg btn-info" href="/#/sign_in">Login</a>
+            </div>
+        </div>
+
     </div>
 </div>
+
+
